# Cloi

./: .env.example  .gitignore  CHECKLIST.md  CLAUDE.md  CLAUDE_fashion_search_v2.md  README.md  SESSION_STATUS.md  Toss.md  build.mjs  index.html  package-lock.json  package.json  vite.config.ts  wrangler.toml  웨어고_PRD.md  클로이_PRD.md
fashion-search/: .dockerignore  .env.example  .gcloudignore  CHECKLIST.md  CLAUDE.md  Dockerfile  SESSION_STATUS.md  deploy.sh  pyproject.toml  requirements.txt
fashion-search/apps/api/: main.py  routes_admin.py  routes_search.py  schemas.py
fashion-search/docs/: EXECUTION_PLAN.md  data_rights_template.md  legal_data_policy.md  system_design.md
fashion-search/eval/: benchmark_models.py  compare.py  ground_truth.jsonl  label_helper.py  metrics.py  regression_test.py  runner.py  tune_rerank.py
fashion-search/eval/gold_set/: README.md
fashion-search/eval/results/: comparison.json  comparison.md  fashion_clip_20260429_172740.json  fashion_clip_20260501_220206.json  marqo_fashion_siglip_20260429_172816.json  openclip_vitl14_20260429_172714.json
fashion-search/scripts/: add_catalog_item.py  build_catalog_index.py  collect_catalog.py  generate_eval_set.py  integration_test.py  integration_test_v2.py  live_qa_s13.py  live_qa_track_a.py  seed_catalog.py  setup_env.sh  smoke_test.py  test_embedders.py
fashion-search/src/cache/: result_cache.py
fashion-search/src/catalog/: contributor.py
fashion-search/training/: data_curator.py  deploy_new_model.py  evaluator.py  lora_trainer.py  pair_generator.py  requirements.txt
src/: App.tsx
(+111 files in other folders)
