[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fashion-search"
version = "0.1.0"
description = "Fashion image similarity search — Phase 2 independent web service"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "apps*"]

[tool.ruff]
line-length = 100
target-version = "py311"
